--- a/blog/templates/blog_detail.html
+++ b/blog/templates/blog_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
-    <img class="card-img-top" src="{% static post.image %}">
+    <img class="blog-img" src="{% static post.image %}">
     <h1>{{ post.title }}</h1>
     <small>
         {{ post.created_on.date }} |&nbsp;
