--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -4,15 +4,16 @@
 {% block page_content %}
 <h1>{{ project.title }}</h1>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-5">
         <img src="{% static project.image %}" alt="" width="100%">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-7 text-justify">
+        <h5>Technology used:</h5>
+        <p>{{ project.technology }}</p>
         <h5>About the project:</h5>
         <p>{{ project.description }}</p>
         <br>
-        <h5>Technology used:</h5>
-        <p>{{ project.technology }}</p>
+        
     </div>
 </div>
 {% endblock %}
