--- a/projects/templates/project_index.html
+++ b/projects/templates/project_index.html
@@ -9,9 +9,9 @@
             <img class="card-img-top" src="{% static project.image %}">
             <div class="card-body">
                 <h5 class="card-title">{{ project.title }}</h5>
-                <p class="card-text">{{ project.description }}</p>
+                <p class="card-text">{{ project.technology }}</p>
                 <a href="{% url 'project_detail' project.pk %}"
-                   class="btn btn-primary">
+                   class="btn btn-sm btn-primary">
                     Read More
                 </a>
             </div>
